# organizer-toolkit

./: .gitignore  404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: organizers-wishlist.md
.github/workflows/: check.yml  ci.yml  link-check.yml.disabled
burnout/: index.html
conference-organizing/: index.html
current-organizers/: index.html
docs/: index.md
docs/burnout/: index.md
docs/conference-organizing/: index.md
docs/current-organizers/: index.md
docs/event-mvp/: index.md
docs/faq/: index.md
docs/governance/: index.md
docs/growing-a-community/: index.md
docs/handing-over-a-community/: index.md
docs/prospective-organizers/: index.md
docs/resources/: index.md
docs/reviving-dormant/: index.md
docs/when-things-go-wrong/: index.md
event-mvp/: index.html
faq/: index.html
governance/: index.html
growing-a-community/: index.html
handing-over-a-community/: index.html
prospective-organizers/: index.html
resources/: index.html
reviving-dormant/: index.html
search/: search_index.json
when-things-go-wrong/: index.html
