[project]
name = "community-organizer-kit-demo"
version = "0.1.0"
description = "Python Software Foundation Community and Conference Organizer Kit - Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-redirects>=1.2.2",
]
